<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="spotim.com.spotimdemoapp.MainActivity">
    <RadioGroup
        android:id="@+id/radioStaging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/staging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staging"
            android:checked="true"
            android:textColor="@color/gray"
            android:paddingRight="34dp"
            />
        <RadioButton
            android:id="@+id/production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production"
            android:textColor="@color/gray"
            />
    </RadioGroup>

    <!--<android.support.v7.widget.SwitchCompat-->
        <!--android:id="@+id/staging_switch"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:text="@string/staging"-->
        <!--android:textColor="@color/gray"-->
        <!--android:shadowColor="@color/white"-->
    <!--/>-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spot_id_wrapper"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spot_id"
        android:hint="@string/enter_spot_id"
        android:textColor="@color/gray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post_id_wrapper"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:layout_below="@id/spot_id_wrapper">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/post_id"
            android:hint="@string/enter_post_id"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_toLeftOf="@id/iframe_btn"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/load_button"
        android:layout_below="@+id/post_id_wrapper"
        android:text="@string/load_spot_im"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:stateListAnimator="@null"/>
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/iframe_btn"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/dismiss_spot_im"
        android:layout_below="@+id/post_id_wrapper"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:layout_alignParentEnd = "false"
        android:layout_marginEnd="20dp"
        android:text="@string/dismiss_spot_im"
        android:layout_marginTop="20dp"
        android:stateListAnimator="@null"/>
    <Button
        android:id="@+id/iframe_btn"
        android:text="@string/load_iframe"
        android:textColor="#FFFFFF"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_id_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/buttonshape"
        android:stateListAnimator="@null"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_holder">
    </FrameLayout>

</RelativeLayout>
